--- a/ecom/ui/package.json
+++ b/ecom/ui/package.json
@@ -9,7 +9,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "jade": "^1.11.0",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "vue": "^2.1.0",
+    "vue-router": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -30,9 +34,9 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
