--- a/ecom/ui/package.json
+++ b/ecom/ui/package.json
@@ -9,11 +9,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "3",
+    "bootstrap-vue": "^0.3.9",
     "jade": "^1.11.0",
+    "jquery": "^3.1.1",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "vue": "^2.1.0",
-    "vue-router": "^2.0.3"
+    "vue-router": "^2.0.3",
+    "vue-slick": "^1.0.0",
+    "vue2-bootstrap": "^0.0.3",
+    "vue2-strap": "^1.0.10"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
