--- a/ecom/ui/package.json
+++ b/ecom/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "3",
     "bootstrap-vue": "^0.3.9",
+    "gsap": "^1.19.0",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
     "node-sass": "^3.13.0",
