--- a/snginx/Dockerfile
+++ b/snginx/Dockerfile
@@ -3,13 +3,9 @@ from nginx:1.11.6-alpine
 maintainer Pham Kieu Thanh
 
 # install certbot
-RUN apk update && apk add ca-certificates wget && update-ca-certificates
-RUN wget https://dl.eff.org/certbot-auto
-RUN chmod a+x certbot-auto
+RUN apk update && apk add ca-certificates certbot && update-ca-certificates
 
-RUN ./certbot-auto
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY start.sh start.sh
+CMD sh start.sh
 
-RUN mkdir -p /srv/sutu.shop
-RUN ./certbot-auto certonly --webroot -/srv/sutu.shop -d sutu.shop -d blog.sutu.shop -d mail.sutu.shop -d admin.sutu.shop -d www.staging.sutu.shop -d admin.staging.sutu.shop -d api.sutu.shop
-RUN ./certbot-auto renew --dry-run
-RUN ./certbot-auto renew --quite --no-self-upgrade
