--- a/snginx/Dockerfile
+++ b/snginx/Dockerfile
@@ -3,9 +3,10 @@ from nginx:1.11.6-alpine
 maintainer Pham Kieu Thanh
 
 # install certbot
-RUN apk update && apk add ca-certificates certbot && update-ca-certificates
+RUN apk update && apk add certbot
 
-COPY default.conf /etc/nginx/conf.d/default.conf
+COPY certbot.conf /etc/nginx/conf.d/certbot.conf
+COPY default.conf default.conf
 COPY start.sh start.sh
 CMD sh start.sh
 
